--- a/neural_net.ipynb
+++ b/neural_net.ipynb
@@ -2,50 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torch import nn, optim\n",
-    "from sklearn.datasets import make_classification\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
     "import numpy as np\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
     "\n",
     "from utils.load_dataset import load_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class NeuralNetwork(nn.Module):\n",
-    "    def __init__(self, n_input_features):\n",
-    "        super(NeuralNetwork, self).__init__()\n",
-    "        self.fully_connected_layer_1 = nn.Linear(n_input_features, 32)\n",
-    "        self.fully_connected_layer_2 = nn.Linear(32, 128)\n",
-    "        self.fully_connected_layer_3 = nn.Linear(128, 256)\n",
-    "        self.fully_connected_layer_4 = nn.Linear(256, 128)\n",
-    "        self.fully_connected_layer_5 = nn.Linear(128, 64)\n",
-    "        self.output_layer = nn.Linear(64, 2)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = torch.relu(self.fully_connected_layer_1(x))\n",
-    "        x = torch.relu(self.fully_connected_layer_2(x))\n",
-    "        x = torch.relu(self.fully_connected_layer_3(x))\n",
-    "        x = torch.relu(self.fully_connected_layer_4(x))\n",
-    "        x = torch.relu(self.fully_connected_layer_5(x))\n",
-    "        x = self.output_layer(x)\n",
-    "        return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,21 +27,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = []\n",
-    "Y = []\n",
+    "y = []\n",
     "\n",
     "for entry in data:\n",
     "    features = entry[:6]\n",
     "    targets = [entry[6][stop] for stop in sorted(entry[6])]\n",
     "    X.append(features)\n",
-    "    Y.append(targets)\n",
+    "    y.append(targets)\n",
     "\n",
     "X = np.array(X, dtype=np.float32)\n",
-    "Y = np.array(Y, dtype=np.float32)\n"
+    "y = np.array(y, dtype=np.float32)\n",
+    "\n",
+    "# Convert numpy arrays to PyTorch tensors\n",
+    "X_tensor = torch.from_numpy(X)\n",
+    "y_tensor = torch.from_numpy(y)\n",
+    "\n",
+    "# Create dataset and DataLoader for batching\n",
+    "dataset = TensorDataset(X_tensor, y_tensor)\n",
+    "dataloader = DataLoader(dataset, batch_size=32, shuffle=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiOutputNN(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(MultiOutputNN, self).__init__()\n",
+    "        self.layer1 = nn.Linear(in_features=6, out_features=64)  # Assuming 6 input features\n",
+    "        self.layer2 = nn.Linear(64, 128)\n",
+    "        self.output_layer = nn.Linear(128, len(y[0]))  # Assuming y[0] has the target structure\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = torch.relu(self.layer1(x))\n",
+    "        x = torch.relu(self.layer2(x))\n",
+    "        x = self.output_layer(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100, Loss: nan\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m num_epochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_epochs):\n\u001b[0;32m---> 10\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtargets\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mdataloader\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m        \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzero_grad\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m   \u001b[49m\u001b[38;5;66;43;03m# Zero the gradients\u001b[39;49;00m\n\u001b[1;32m     12\u001b[0m \u001b[43m        \u001b[49m\u001b[43moutputs\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mnet\u001b[49m\u001b[43m(\u001b[49m\u001b[43minputs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m   \u001b[49m\u001b[38;5;66;43;03m# Forward pass\u001b[39;49;00m\n",
+      "File \u001b[0;32m~/Desktop/yuttle-tracker/venv/lib/python3.11/site-packages/torch/utils/data/dataloader.py:627\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    626\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__next__\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Any:\n\u001b[0;32m--> 627\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mwith\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprofiler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrecord_function\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_profile_name\u001b[49m\u001b[43m)\u001b[49m\u001b[43m:\u001b[49m\n\u001b[1;32m    628\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_sampler_iter\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mis\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m:\u001b[49m\n\u001b[1;32m    629\u001b[0m \u001b[43m            \u001b[49m\u001b[38;5;66;43;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;49;00m\n\u001b[1;32m    630\u001b[0m \u001b[43m            \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_reset\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# type: ignore[call-arg]\u001b[39;49;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "net = MultiOutputNN()\n",
+    "\n",
+    "# Loss function and optimizer\n",
+    "criterion = nn.MSELoss()  # Assuming a regression task; change if it's a classification\n",
+    "optimizer = optim.Adam(net.parameters(), lr=0.001)\n",
+    "\n",
+    "# Training loop\n",
+    "num_epochs = 100\n",
+    "for epoch in range(num_epochs):\n",
+    "    for inputs, targets in dataloader:\n",
+    "        optimizer.zero_grad()   # Zero the gradients\n",
+    "        outputs = net(inputs)   # Forward pass\n",
+    "        loss = criterion(outputs, targets)  # Compute loss\n",
+    "        loss.backward()         # Backpropagate the errors\n",
+    "        optimizer.step()        # Update the weights\n",
+    "    \n",
+    "    if epoch % 10 == 0:\n",
+    "        print(f'Epoch {epoch+1}/{num_epochs}, Loss: {loss.item()}')"
    ]
   },
   {
