--- a/koray.ipynb
+++ b/koray.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -27,13 +27,85 @@
     }
    ],
    "source": [
-    "\n",
     "print(data[:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4047296"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.001356048487154398\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.multioutput import MultiOutputRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Preparing the input and output data\n",
+    "X = []\n",
+    "Y = []\n",
+    "\n",
+    "for entry in data:\n",
+    "    try:\n",
+    "        features = entry[:6]\n",
+    "        targets = [entry[6][stop] for stop in entry[6]]\n",
+    "        X.append(features)\n",
+    "        Y.append(targets)\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        print(entry)\n",
+    "\n",
+    "X = np.array(X)\n",
+    "Y = np.array(Y)\n",
+    "\n",
+    "# Splitting data into training and test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Model definition and training\n",
+    "model = MultiOutputRegressor(LinearRegression())\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Prediction and performance evaluation\n",
+    "y_pred = model.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(f\"Mean Squared Error: {mse}\")\n",
+    "\n",
+    "# Mean Squared Error: 0.0001758471745821059\n",
+    "# Mean Squared Error: 0.0007756456728488785"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +115,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 29\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# Model definition and training\u001b[39;00m\n\u001b[1;32m     28\u001b[0m model \u001b[38;5;241m=\u001b[39m MultiOutputRegressor(LinearRegression())\n\u001b[0;32m---> 29\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Prediction and performance evaluation\u001b[39;00m\n\u001b[1;32m     32\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(X_test)\n",
+      "Cell \u001b[0;32mIn[4], line 29\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# Model definition and training\u001b[39;00m\n\u001b[1;32m     28\u001b[0m model \u001b[38;5;241m=\u001b[39m MultiOutputRegressor(LinearRegression())\n\u001b[0;32m---> 29\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# Prediction and performance evaluation\u001b[39;00m\n\u001b[1;32m     32\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(X_test)\n",
       "File \u001b[0;32m~/Documents/GitHub/yuttle-tracker/.venv/lib/python3.10/site-packages/sklearn/base.py:1474\u001b[0m, in \u001b[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[0;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1467\u001b[0m     estimator\u001b[38;5;241m.\u001b[39m_validate_params()\n\u001b[1;32m   1469\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[1;32m   1470\u001b[0m     skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[1;32m   1471\u001b[0m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[1;32m   1472\u001b[0m     )\n\u001b[1;32m   1473\u001b[0m ):\n\u001b[0;32m-> 1474\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfit_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mestimator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Documents/GitHub/yuttle-tracker/.venv/lib/python3.10/site-packages/sklearn/multioutput.py:272\u001b[0m, in \u001b[0;36m_MultiOutputEstimator.fit\u001b[0;34m(self, X, y, sample_weight, **fit_params)\u001b[0m\n\u001b[1;32m    269\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m sample_weight \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    270\u001b[0m         routed_params\u001b[38;5;241m.\u001b[39mestimator\u001b[38;5;241m.\u001b[39mfit[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msample_weight\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m sample_weight\n\u001b[0;32m--> 272\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mestimators_ \u001b[38;5;241m=\u001b[39m \u001b[43mParallel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_jobs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mn_jobs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    273\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdelayed\u001b[49m\u001b[43m(\u001b[49m\u001b[43m_fit_estimator\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    274\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mestimator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mrouted_params\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mestimator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\n\u001b[1;32m    275\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    276\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    277\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    279\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mestimators_[\u001b[38;5;241m0\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mn_features_in_\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    280\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_features_in_ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mestimators_[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mn_features_in_\n",
       "File \u001b[0;32m~/Documents/GitHub/yuttle-tracker/.venv/lib/python3.10/site-packages/sklearn/utils/parallel.py:67\u001b[0m, in \u001b[0;36mParallel.__call__\u001b[0;34m(self, iterable)\u001b[0m\n\u001b[1;32m     62\u001b[0m config \u001b[38;5;241m=\u001b[39m get_config()\n\u001b[1;32m     63\u001b[0m iterable_with_config \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m     64\u001b[0m     (_with_config(delayed_func, config), args, kwargs)\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m delayed_func, args, kwargs \u001b[38;5;129;01min\u001b[39;00m iterable\n\u001b[1;32m     66\u001b[0m )\n\u001b[0;32m---> 67\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__call__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43miterable_with_config\u001b[49m\u001b[43m)\u001b[49m\n",
@@ -97,12 +169,17 @@
     "mse = mean_squared_error(y_test, y_pred)\n",
     "print(f\"Mean Squared Error: {mse}\")\n",
     "\n",
-    "# Mean Squared Error: 0.0001758471745821059\n"
+    "# Mean Squared Error: 0.0001758471745821059\n",
+    "# with setting the path percents when we set the stop:\n",
+    "# Mean Squared Error: 0.024363979931588405\n",
+    "# Mean Squared Error: 0.024367321812157436\n",
+    "# withOUT my changes:\n",
+    "# Mean Squared Error: 0.025734545215464692\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,53 +194,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average distance:  0.009394167414093641\n"
+      "Average distance:  11.374115974040308\n"
      ]
     }
    ],
    "source": [
-    "print(\"Average distance: \", average_distance)"
+    "print(\"Average distance: \", average_distance * 60 * 11)\n",
+    "\n",
+    "# Average distance:  0.009394167414093641\n",
+    "# Average distance:  0.07215960914735965\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Arrivals: [[0.07609787 0.0740696  0.07006849 0.06507664 0.06981105 0.06830254\n",
-      "  0.06326747 0.06545227 0.06754369 0.05375861 0.04997239 0.0370516\n",
-      "  0.03010312 0.02691746 0.0224177  0.01454634 0.01447683 0.01564698\n",
-      "  0.01615169 0.01799127 0.02085638 0.0239129  0.03012334 0.03858441\n",
-      "  0.04554423 0.04614381 0.04607567 0.0445388  0.05844421 0.05865899\n",
-      "  0.06008624 0.06888743]]\n"
+      "Predicted Arrivals: [[0.07322555 0.07815015 0.08078147 0.08724422 0.0768428  0.07998123\n",
+      "  0.09964835 0.09271535 0.09242325 0.09897121 0.09879543 0.09395944\n",
+      "  0.088822   0.08741855 0.08395344 0.0866678  0.08337209 0.08258474\n",
+      "  0.08166951 0.08596762 0.08458978 0.0962554  0.10583898 0.10381071\n",
+      "  0.10293284 0.12483189 0.09831686 0.09330589 0.08881926 0.08338567\n",
+      "  0.08557544 0.06947874]]\n"
      ]
     }
    ],
    "source": [
     "# Example prediction\n",
-    "example_data = np.array([[0.12233905210994085, 0.6951862245851033, 0.7188296829897263, 0, 0.01958, 2]])\n",
+    "example_data = np.array([[0.00414518376965307, 0.026042013301566348, 0.9996608492599883, 106, 0.00016, 4]])\n",
     "predicted_arrivals = model.predict(example_data)\n",
-    "print(\"Predicted Arrivals:\", predicted_arrivals)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "actual_arrivals = "
+    "print(\"Predicted Arrivals:\", predicted_arrivals)\n",
+    "\n",
+    "{10: 0.04427, 2: 0.0461, 5: 0.04794, 52: 0.04824, 41: 0.05252, 20: 0.05313, 108: 0.05435, 106: 0.002, 34: 0.00443, 101: 0.00534, 47: 0.00625, 100: 0.00807, 102: 0.00928, 105: 0.01081, 69: 0.01415, 139: 0.01446, 136: 0.01538, 130: 0.01598, 129: 0.0166, 140: 0.01782, 133: 0.01964, 135: 0.02055, 138: 0.02146, 97: 0.02329, 66: 0.0242, 63: 0.02572, 42: 0.02754, 98: 0.02997, 38: 0.03028, 39: 0.03301, 72: 0.03481, 43: 0.03968}\n",
+    "\n",
+    "[[0.07322555 0.07815015 0.08078147 0.08724422 0.0768428  0.07998123\n",
+    "  0.09964835 0.09271535 0.09242325 0.09897121 0.09879543 0.09395944\n",
+    "  0.088822   0.08741855 0.08395344 0.0866678  0.08337209 0.08258474\n",
+    "  0.08166951 0.08596762 0.08458978 0.0962554  0.10583898 0.10381071\n",
+    "  0.10293284 0.12483189 0.09831686 0.09330589 0.08881926 0.08338567\n",
+    "  0.08557544 0.06947874]]"
    ]
   },
   {
