--- a/koray.ipynb
+++ b/koray.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,16 +207,96 @@
     "    def __init__(self):\n",
     "        super(SimpleNet, self).__init__()\n",
     "        self.fc1 = nn.Linear(5, 64)  # Input to hidden layer\n",
-    "        self.fc1andahalf = nn.Linear(64, 256)\n",
-    "        self.fc2 = nn.Linear(256, 32)  # Hidden to output layer\n",
+    "        self.fc2 = nn.Linear(64, 256)\n",
+    "        self.fc3 = nn.Linear(256, 1024)\n",
+    "        self.fc4 = nn.Linear(1024, 4096)\n",
+    "        self.fc5 = nn.Linear(4096, 32)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = torch.relu(self.fc1(x))\n",
-    "        x = torch.relu(self.fc1andahalf(x))\n",
-    "        x = self.fc2(x)\n",
+    "        x = torch.relu(self.fc2(x))\n",
+    "        x = torch.relu(self.fc3(x))\n",
+    "        x = torch.relu(self.fc4(x))\n",
+    "        x = self.fc5(x)\n",
     "        return x\n",
     "\n",
     "model = SimpleNet()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Loss: 0.01901528437656975\n",
+      "Epoch 2, Loss: 0.017022099650804434\n",
+      "Epoch 3, Loss: 0.016017415889778598\n",
+      "Epoch 4, Loss: 0.015212986345418933\n",
+      "Epoch 5, Loss: 0.014970204506211638\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.optim as optim\n",
+    "\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "# Training loop\n",
+    "num_epochs = 5  # Reduced number of epochs\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    total_loss = 0\n",
+    "    for inputs, targets in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, targets)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
+    "    print(f'Epoch {epoch+1}, Loss: {total_loss/len(train_loader)}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.015471447987661592\n",
+      "Average distance:  41.746504440968856\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval()\n",
+    "total_test_loss = 0\n",
+    "average_distance = 0\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    total_elements = 0  # To account for total number of predictions across all batches\n",
+    "    for inputs, targets in test_loader:\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, targets)\n",
+    "        total_test_loss += loss.item()\n",
+    "\n",
+    "        # Calculate average distance\n",
+    "        for i in range(outputs.shape[0]):\n",
+    "            for j in range(outputs.shape[1]):\n",
+    "                average_distance += abs(outputs[i, j].item() - targets[i, j].item())\n",
+    "                total_elements += 1\n",
+    "\n",
+    "    print(f'Test Loss: {total_test_loss/len(test_loader)}')\n",
+    "\n",
+    "average_distance /= total_elements\n",
+    "print(\"Average distance: \", average_distance * 60 * 11)\n"
    ]
   },
   {
