final vals with 15 epochs

--- a/koray.ipynb
+++ b/koray.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,8 +209,8 @@
     "        self.fc1 = nn.Linear(5, 64)  # Input to hidden layer\n",
     "        self.fc2 = nn.Linear(64, 256)\n",
     "        self.fc3 = nn.Linear(256, 1024)\n",
-    "        self.fc4 = nn.Linear(1024, 4096)\n",
-    "        self.fc5 = nn.Linear(4096, 32)\n",
+    "        self.fc4 = nn.Linear(1024, 256)\n",
+    "        self.fc5 = nn.Linear(256, 32)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = torch.relu(self.fc1(x))\n",
@@ -225,29 +225,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Loss: 0.01901528437656975\n",
-      "Epoch 2, Loss: 0.017022099650804434\n",
-      "Epoch 3, Loss: 0.016017415889778598\n",
-      "Epoch 4, Loss: 0.015212986345418933\n",
-      "Epoch 5, Loss: 0.014970204506211638\n"
+      "Epoch 1, Loss: 0.07304379148671042\n",
+      "Epoch 2, Loss: 0.05396353815110205\n",
+      "Epoch 3, Loss: 0.05128512631465122\n",
+      "Epoch 4, Loss: 0.04926334072134809\n",
+      "Epoch 5, Loss: 0.048062414491606385\n",
+      "Epoch 6, Loss: 0.04859894376973912\n",
+      "Epoch 7, Loss: 0.04867384848021178\n",
+      "Epoch 8, Loss: 0.04924630904178528\n",
+      "Epoch 9, Loss: 0.049114761232970476\n",
+      "Epoch 10, Loss: 0.04863806803532997\n",
+      "Epoch 11, Loss: 0.04821928166726921\n",
+      "Epoch 12, Loss: 0.04799956372906823\n",
+      "Epoch 13, Loss: 0.047623108001802986\n",
+      "Epoch 14, Loss: 0.04755525419783562\n",
+      "Epoch 15, Loss: 0.047267598550240104\n"
      ]
     }
    ],
    "source": [
     "import torch.optim as optim\n",
     "\n",
-    "criterion = nn.MSELoss()\n",
+    "criterion = torch.nn.L1Loss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "# Training loop\n",
-    "num_epochs = 5  # Reduced number of epochs\n",
+    "num_epochs = 15\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    total_loss = 0\n",
@@ -263,15 +273,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.015471447987661592\n",
-      "Average distance:  41.746504440968856\n"
+      "Test Loss: 0.0452398518657392\n",
+      "Average distance:  29.862651762688582\n"
      ]
     }
    ],
@@ -370,7 +380,7 @@
     }
    ],
    "source": [
-    "criterion = nn.MSELoss()\n",
+    "criterion = torch.nn.L1Loss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
     "\n",
     "# Training loop\n",
