--- a/neural_net.ipynb
+++ b/neural_net.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,29 +11,29 @@
     "import torch.optim as optim\n",
     "import numpy as np\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "\n",
     "from utils.load_dataset import load_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = load_dataset()\n",
-    "assert len(data[0]) == 7"
+    "data = load_dataset(1, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = []\n",
     "y = []\n",
-    "\n",
     "for entry in data:\n",
     "    features = entry[:6]\n",
     "    targets = [entry[6][stop] for stop in sorted(entry[6])]\n",
@@ -43,13 +43,141 @@
     "X = np.array(X, dtype=np.float32)\n",
     "y = np.array(y, dtype=np.float32)\n",
     "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "\n",
     "# Convert numpy arrays to PyTorch tensors\n",
-    "X_tensor = torch.from_numpy(X)\n",
-    "y_tensor = torch.from_numpy(y)\n",
+    "X_tensor = torch.from_numpy(X_train)\n",
+    "y_tensor = torch.from_numpy(y_train)\n",
     "\n",
     "# Create dataset and DataLoader for batching\n",
     "dataset = TensorDataset(X_tensor, y_tensor)\n",
     "dataloader = DataLoader(dataset, batch_size=32, shuffle=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SimpleNN(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size1, hidden_size2, hidden_size3, output_size):\n",
+    "        super(SimpleNN, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_size, hidden_size1)\n",
+    "        self.fc2 = nn.Linear(hidden_size1, hidden_size2)\n",
+    "        self.fc3 = nn.Linear(hidden_size2, hidden_size3)\n",
+    "        self.fc4 = nn.Linear(hidden_size3, output_size)\n",
+    "        self.relu = nn.ReLU()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.fc1(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.fc2(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.fc3(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.fc4(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_size = 6\n",
+    "hidden_size = 400  # You can change this\n",
+    "hidden_size2 = 1600  # You can change this\n",
+    "hidden_size3 = 400  # You can change this\n",
+    "output_size = 32\n",
+    "\n",
+    "# Initialize the network\n",
+    "model = SimpleNN(input_size, hidden_size, hidden_size2, hidden_size3, output_size)\n",
+    "\n",
+    "# Loss and optimizer\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/20], Loss: 0.0496\n",
+      "Epoch [2/20], Loss: 0.0322\n",
+      "Epoch [3/20], Loss: 0.0318\n",
+      "Epoch [4/20], Loss: 0.0038\n",
+      "Epoch [5/20], Loss: 0.0091\n",
+      "Epoch [6/20], Loss: 0.0130\n",
+      "Epoch [7/20], Loss: 0.0228\n",
+      "Epoch [8/20], Loss: 0.0020\n",
+      "Epoch [9/20], Loss: 0.0191\n",
+      "Epoch [10/20], Loss: 0.0158\n",
+      "Epoch [11/20], Loss: 0.0021\n",
+      "Epoch [12/20], Loss: 0.0120\n",
+      "Epoch [13/20], Loss: 0.0093\n",
+      "Epoch [14/20], Loss: 0.0143\n",
+      "Epoch [15/20], Loss: 0.0107\n",
+      "Epoch [16/20], Loss: 0.0153\n",
+      "Epoch [17/20], Loss: 0.0096\n",
+      "Epoch [18/20], Loss: 0.0145\n",
+      "Epoch [19/20], Loss: 0.0117\n",
+      "Epoch [20/20], Loss: 0.0129\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_epochs = 1000  # Number of training epochs\n",
+    "for epoch in range(num_epochs):\n",
+    "    for inputs, targets in dataloader:\n",
+    "        # Forward pass\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, targets)\n",
+    "        \n",
+    "        # Backward and optimize\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        if epoch % 20 == 0:\n",
+    "            for g in optimizer.param_groups:\n",
+    "                g['lr'] = g['lr'] * 0.5\n",
+    "    \n",
+    "    \n",
+    "    print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item():.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test MSE: 0.0533\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_test_tensor = torch.from_numpy(X_test)\n",
+    "y_test_tensor = torch.from_numpy(y_test)\n",
+    "\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    predictions = model(X_test_tensor)\n",
+    "    predictions_np = predictions.numpy()  # Assuming regression output directly\n",
+    "    y_test_np = y_test_tensor.numpy()\n",
+    "    mse = mean_absolute_error(y_test_np, predictions_np)\n",
+    "    print(f\"Test MSE: {mse:.4f}\")"
    ]
   },
   {
