--- a/koray.ipynb
+++ b/koray.ipynb
@@ -372,123 +372,13 @@
     "average_distance /= total_elements\n",
     "print(\"Average distance: \", average_distance * 60 * 11)\n",
     "\n",
-    "# Not using their estimates:\n",
-    "# Test Loss: 0.0452398518657392\n",
-    "# Average distance:  29.862651762688582\n",
-    "\n",
-    "# ONLY their estimates:\n",
-    "# Test Loss: 0.041039\n",
-    "# Average Distance: 27.08574\n",
-    "\n",
-    "# 25 epochs\n",
-    "# Test Loss: 0.03276266926062493\n",
-    "# Average distance:  21.618538019986776\n",
-    "\n",
-    "# 75 epochs, halving learning rate every 10 epochs\n",
+    "# 75 epochs, halving learning rate every 10 epochs, not using their estimates\n",
     "# Test Loss: 0.007547942571261007\n",
     "# Average distance:  4.981981012612223\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
-    "class MyDataset(Dataset):\n",
-    "    def __init__(self, data):\n",
-    "        self.inputs = [torch.tensor(d[:5]) for d in data]  # First five features\n",
-    "        self.targets = [torch.tensor(list(d[6].values())) for d in data]  # Dictionary to tensor\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.inputs)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        return self.inputs[idx], self.targets[idx]\n",
-    "\n",
-    "dataset = MyDataset(data)\n",
-    "dataloader = DataLoader(dataset, batch_size=10, shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Net(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Net, self).__init__()\n",
-    "        self.fc1 = nn.Linear(5, 128)  # Input layer\n",
-    "        self.fc2 = nn.Linear(128, 64)  # Hidden layer\n",
-    "        self.fc3 = nn.Linear(64, 32)  # Output layer\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = torch.relu(self.fc1(x))\n",
-    "        x = torch.relu(self.fc2(x))\n",
-    "        x = self.fc3(x)\n",
-    "        return x\n",
-    "\n",
-    "model = Net()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1, Loss: 0.00036367078428156674\n",
-      "Epoch 2, Loss: 0.0004891767166554928\n",
-      "Epoch 3, Loss: 0.06847893446683884\n",
-      "Epoch 4, Loss: 0.008395458571612835\n",
-      "Epoch 5, Loss: 0.006463161204010248\n",
-      "Epoch 6, Loss: 0.001458467566408217\n",
-      "Epoch 7, Loss: 0.007903995923697948\n",
-      "Epoch 8, Loss: 0.0006430408684536815\n",
-      "Epoch 9, Loss: 0.022434769198298454\n",
-      "Epoch 10, Loss: 0.001984475878998637\n"
-     ]
-    }
-   ],
-   "source": [
-    "criterion = torch.nn.L1Loss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
-    "\n",
-    "# Training loop\n",
-    "for epoch in range(10):  # Number of epochs\n",
-    "    for inputs, targets in dataloader:\n",
-    "        optimizer.zero_grad()\n",
-    "        outputs = model(inputs.float())\n",
-    "        loss = criterion(outputs, targets.float())\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "    print(f'Epoch {epoch+1}, Loss: {loss.item()}')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Assuming test_loader is set up similarly to dataloader\n",
-    "model.eval()  # Set the model to evaluation mode\n",
-    "with torch.no_grad():\n",
-    "    for inputs, targets in test_loader:\n",
-    "        outputs = model(inputs.float())\n",
-    "        # Evaluate the outputs\n",
-    "        print(\"Predicted:\", outputs)\n",
-    "        print(\"Actual:\", targets)\n"
+    "# 75 epochs, halving learning rate every 10 epochs, using their estimates\n",
+    "# Test Loss: 0.0070760076254948595\n",
+    "# Average distance:  4.670307582987945\n"
    ]
   },
   {
@@ -523,17 +413,6 @@
     "            break\n",
     "    \n",
     "print(route_stops_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if 0.56 - 0.5908789960154363 - 0.62\n",
-    "\n",
-    "0.88 - 0.91 - 0.94"
    ]
   }
  ],
