--- a/main.ipynb
+++ b/main.ipynb
@@ -15,9 +15,7 @@
     "else:\n",
     "    groundtruth_index = 6\n",
     "\n",
-    "data = load_dataset(include_predictions=include_predictions)\n",
-    "\n",
-    "# data_2 = read_compressed_data(\"data/processed_data/arrival_data/bus_1_38.json.gz\")\n"
+    "data = load_dataset(include_predictions=include_predictions)"
    ]
   },
   {
@@ -57,12 +55,43 @@
     }
    ],
    "source": [
-    "len(data)\n",
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linear Regression\n",
     "\n",
-    "# WITHOUT ZEROES:\n",
-    "# 125823\n",
-    "# WITH ZEROES:\n",
-    "# 126478"
+    "\n",
+    "#### WITH THE DOWNTOWNER APP:\n",
+    "\n",
+    "Mean Squared Error: 0.0012367148906002779\n",
+    "\n",
+    "Mean Absolute Error: 0.011857285328340308\n",
+    "\n",
+    "Mean Distance: 7.825808316704604\n",
+    "\n",
+    "#### WITHOUT THE DOWNTOWNER APP:\n",
+    "\n",
+    "Mean Squared Error: 0.0013448742694995505\n",
+    "\n",
+    "Mean Absolute Error: 0.01531571679849884\n",
+    "\n",
+    "Mean Distance: 10.108373087009234\n",
+    "\n",
+    "#### DOWNTOWNER APP ONLY:\n",
+    "\n",
+    "Average MSE: 0.0015\n",
+    "\n",
+    "Average MAE: 0.0115\n",
+    "\n",
+    "Average Distance: 7.6006\n",
+    "\n",
+    "## Explanation\n",
+    "\n",
+    "Given that this is lower than the linear regression using this, it's probably because we're optimizing MSE with linear regression instead of MAE. This gives us a lower MSE but not a lower MAE. But we care about MAE! So linear regression is probably not the best to use. \n"
    ]
   },
   {
@@ -161,6 +190,26 @@
     "example_data = np.array([[0.00414518376965307, 0.026042013301566348, 0.9996608492599883, 106, 0.00016, 4]])\n",
     "predicted_arrivals = model.predict(example_data)\n",
     "print(\"Predicted Arrivals:\", predicted_arrivals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Neural Net Performance\n",
+    "75 epochs, halving learning rate every 10 epochs, not using DowntownerApp estimates:\n",
+    "\n",
+    "Test Loss: 0.007547942571261007\n",
+    "\n",
+    "Average distance:  4.981981012612223\n",
+    "\n",
+    "------\n",
+    "\n",
+    "75 epochs, halving learning rate every 10 epochs, using DowntownerApp estimates:\n",
+    "\n",
+    "Test Loss: 0.0070760076254948595\n",
+    "\n",
+    "Average distance:  4.670307582987945"
    ]
   },
   {
@@ -379,6 +428,22 @@
     "# 75 epochs, halving learning rate every 10 epochs, using their estimates\n",
     "# Test Loss: 0.0070760076254948595\n",
     "# Average distance:  4.670307582987945\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ignore everything below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ignore This\n"
    ]
   },
   {
